<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/to_sms"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/To"
        android:inputType="phone" />

    <EditText
        android:id="@+id/id_sms"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/send_sms"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/send" />

        <Button
            android:id="@+id/contacts_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/send_sms"
            android:text="@string/contacts" />

    </RelativeLayout>

    <EditText
        android:id="@+id/body_sms"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ems="10"
        android:inputType="textMultiLine"
        android:gravity="left|top" >

        <requestFocus />
    </EditText>

</LinearLayout>